mavensmate/Fabrication/deploy/kalho13@gmail.com/2014-05-14 14:45:45/unpackaged/objects/Job_Shipping_Details__c.object
<CustomObject>
    <fields>
        <fullName>Date_Loaded__c</fullName>
        <label>Date Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Part__c</fullName>
        <label>Job Part</label>
        <referenceTo>Job_Part__c</referenceTo>
        <relationshipLabel>Job Shipping Details</relationshipLabel>
        <relationshipName>Job_Shipping_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_Loaded__c</fullName>
        <label>Number Loaded</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Number__c</fullName>
        <label>Pallet Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Shipping Details</label>
    <nameField>
        <displayFormat>Shp-{000000}</displayFormat>
        <label>Job Shipping Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Shipping Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>